tests/expectations/compiler/core/algorithms/integers/bhp512/bhp512_hash_to_i32.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let a: i32 = BHP512::hash_to_i32(addr_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let b: i32 = BHP512::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let c: i32 = BHP512::hash_to_i32(field_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let d: i32 = BHP512::hash_to_i32(group_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let e: i32 = BHP512::hash_to_i32(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let f: i32 = BHP512::hash_to_i32(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let g: i32 = BHP512::hash_to_i32(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let h: i32 = BHP512::hash_to_i32(i64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let i: i32 = BHP512::hash_to_i32(i128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let j: i32 = BHP512::hash_to_i32(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let k: i32 = BHP512::hash_to_i32(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:22
     |
  39 |         let l: i32 = BHP512::hash_to_i32(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let m: i32 = BHP512::hash_to_i32(u64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:22
     |
  41 |         let n: i32 = BHP512::hash_to_i32(u128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:22
     |
  42 |         let o: i32 = BHP512::hash_to_i32(scalar_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:22
     |
  44 |         let q: i32 = BHP512::hash_to_i32(Foo { a: 1u128, b: 1u128 });
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
